--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -30,6 +30,49 @@
 @tailwind components;
 @tailwind utilities;
 
+/* HtmlEditor 헤딩 스타일 */
+div[contenteditable] h1 {
+  font-size: 2.25rem !important;
+  font-weight: 700 !important;
+  line-height: 1.2 !important;
+  margin: 1rem 0 !important;
+}
+
+div[contenteditable] h2 {
+  font-size: 1.875rem !important;
+  font-weight: 600 !important;
+  line-height: 1.3 !important;
+  margin: 0.875rem 0 !important;
+}
+
+div[contenteditable] h3 {
+  font-size: 1.5rem !important;
+  font-weight: 600 !important;
+  line-height: 1.4 !important;
+  margin: 0.75rem 0 !important;
+}
+
+div[contenteditable] h4 {
+  font-size: 1.25rem !important;
+  font-weight: 500 !important;
+  line-height: 1.4 !important;
+  margin: 0.625rem 0 !important;
+}
+
+div[contenteditable] h5 {
+  font-size: 1.125rem !important;
+  font-weight: 500 !important;
+  line-height: 1.5 !important;
+  margin: 0.5rem 0 !important;
+}
+
+div[contenteditable] h6 {
+  font-size: 1rem !important;
+  font-weight: 500 !important;
+  line-height: 1.5 !important;
+  margin: 0.5rem 0 !important;
+}
+
 /* 수평 스크롤 방지 */
 html,
 body {
